section-3/03-network-policy/allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec: 
  podSelector:
    matchLabels:
      <CHANGE_ME>
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            <CHANGE_ME>
        podSelector:
          matchLabels:
            <CHANGE_ME>
      ports:
        - port: <CHANGE_ME>
          protocol: <CHANGE_ME>
